concord_macros/tests/trybuild/fail/route/secret_in_fmt_path_atom.stderr
error: secret.* is not allowed in fmt[...]
  --> tests/trybuild/fail/route/secret_in_fmt_path_atom.rs:10:37
   |
10 |         path [fmt["prefix-", secret.token]]
   |                                     ^^^^^
